--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-    <title>ゲーム攻略サイト</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="UTF-8">
+  <title>ミッド怠慢攻略サイト</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>ゲーム攻略サイトへようこそ！</h1>
-    <p>ここでは攻略情報を紹介していきます。</p>
-    <script src="script.js"></script>
+  <header>
+    <h1>ミッド怠慢攻略サイト</h1>
+    <nav>
+      <a href="index.html">トップ</a>
+      <a href="mid-strategy.html">攻略</a>
+      <a href="weapons.html">武器</a>
+      <a href="videos.html">動画</a>
+    </nav>
+  </header>
+
+  <main>
+    <section class="intro">
+      <h2>ミッド怠慢とは？</h2>
+      <p>荒野行動の人気1v1モード「ミッド怠慢」の徹底攻略サイトへようこそ！</p>
+    </section>
+
+    <section class="tips">
+      <h2>攻略のコツ</h2>
+      <ul>
+        <li>射線管理が命！</li>
+        <li>リロードタイミングを見極めろ</li>
+        <li>ジャンプ撃ちは使いどころが重要</li>
+      </ul>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
